# arq_avancadas

./: .gitignore  README.md
.ipynb_checkpoints/: ApendiceF-checkpoint.ipynb
projeto_final/: AnnealingStealing.cpp  AnnealingStealing.h  CMakeLists.txt  City.cpp  City.h  GeneratePaths.cpp  Opt2.cpp  Opt2.h  Path.cpp  Path.h  Read.h  hello.F90  hello_mpi.cpp  hello_openmp.cpp  main.cpp  mpi  plot_solution.py  rodar.sh  utils.cc  utils.h
projeto_final/ALL_tsp/: ch4.opt.tour  ch4.tsp  ch6.tsp  pla7397.tsp
projeto_final/results/: PlotResultados-2.ipynb  PlotResultados.ipynb  generate_graphs.py  resultados_random_1.txt  resultados_random_1_corrigido.txt  resultados_random_4.txt  resultados_random_6.txt
projeto_final/results/.ipynb_checkpoints/: PlotResultados-2-Filtrados-checkpoint.ipynb  PlotResultados-2-checkpoint.ipynb  PlotResultados-checkpoint.ipynb
projeto_final/results/NewResults/: geomec.log.error  geomec.log.output  opt2_4nos.log.error  opt2_4nos.log.output  resultados_4_nos_random.txt  resultados_6_nos_random.txt  resultados_random_umno.txt
projeto_final/results/NewResults/OpenMPS/: 1504530704079756395.json  1504530704079838319.json  1504530704079919871.json  1504530706020404361.json  1504530706020475243.json  1504530706020550956.json  1504530706020622681.json  1504530706020699677.json  1504530708033381513.json  1504530708033433156.json  1504530708033497568.json  1504530708033801331.json  1504530710066113454.json  1504530710066193171.json  1504530710066263633.json  150453071006630177.json  1504530710066632857.json  1504530711042727892.json  1504530711042774058.json  1504530711042845880.json  1504530711042997661.json  15045307120789646.json  1504530713051722768.json  1504530713051816564.json  1504530713051912474.json  15045307140513004.json  1504530715066147825.json  1504530715066219642.json  1504530715066290021.json  1504530715066377897.json  1504530715066548430.json  1504530716097473778.json  1504530716097543818.json  1504530716097682716.json  1504530716097750725.json  1504530716097819376.json  1504530718016112457.json  1504530718016152110.json  1504530718016207207.json  1504530718016285817.json  (+6 more)
projeto_final/results/NewResults/jsons/: 1504389774038460354.json  1504389774038809963.json  1504389777050553279.json  1504389778011359837.json  1504389783059770057.json  1504389784040117663.json  1504389786065885244.json  15043897900761379.json  1504389793020244267.json  150438979600305123.json  1504389799083382106.json
projeto_final/results/att48/: generate_graphs.py  path_00.txt  path_01.txt  path_02.txt  path_03.txt  path_04.txt  path_05.txt  path_06.txt  path_07.txt  path_08.txt  path_09.txt  path_10.txt  path_11.txt  path_12.txt  path_13.txt  path_14.txt  path_15.txt  path_16.txt  path_17.txt  path_18.txt  path_19.txt  path_20.txt  path_21.txt  path_22.txt  path_23.txt  path_24.txt  path_25.txt  path_26.txt  path_27.txt  path_28.txt  path_29.txt  path_30.txt  path_31.txt  path_32.txt  path_33.txt  path_34.txt  path_35.txt  path_36.txt  path_37.txt  path_38.txt  (+12 more)
projeto_final/results/rd100/: resultados_random_umno_openmp.txt
projeto_final/tests/: CMakeLists.txt  OpenMP.cpp  Opt2MPITest.cpp  Opt2OpenMPDynamicTest.cpp  Opt2OpenMPStaticTest.cpp  Opt2OpenMPTest.cpp  Opt2Test.cpp  Opt2TestMPI.cpp  PathTest.cpp  ler_out.py  qsub_mpi.sh  qsub_mpi_2nos.sh  qsub_openmp.sh
